--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "guoguo/tpglow",
+    "name": "guoguo/tpflow",
     "description": "Tpflow PHP开源工作流引擎",
 	 "license": "MIT",
     "authors": [
