--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
 		"php": ">=7.0",
-		"topthink/think-orm": "^2.0|^3.0"
+		"topthink/think-orm": "^2.0|^3.0|^4.0"
 	  },
 	  "autoload": {
 		"psr-4": {
